--- a/web/css/style.css
+++ b/web/css/style.css
@@ -55,6 +55,25 @@ img {
     background: #000;
     margin: 8px auto;
 }
+.subtitulo-interno {
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: bold;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+    color: #000;
+    margin-bottom:20px;
+
+}
+
+.subtitulo-interno:after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background: #000;
+    margin: 8px 0;
+}
 
 /*Header*/
 
@@ -89,6 +108,11 @@ img {
 .header_menu ul li a:hover {
     color: #fff;
 }
+
+.header_menu ul li a.menu_ativo {
+    color: #fff;
+}
+
 /*Introdução*/
 
 .introducao {
@@ -135,6 +159,34 @@ img {
     font-size: 14px;
     letter-spacing: .1em;
 }
+
+/*Introdução Interna*/
+
+.introducao-interna {
+    width: 100%;
+    margin-top: 92px;
+    height: 160px;
+    background-size: cover;
+    color: #fff;
+    text-align: center;
+    padding-top: 30px;
+}
+
+.introducao-interna h1 {
+    font-size: 36px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.introducao-interna h1:after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background: #fff;
+    margin: 6px auto 10px auto;
+}
+
 
 /*Produtos*/
 
@@ -232,6 +284,7 @@ img {
 
 .qualidade_lista {
     padding-top: 20px;
+    overflow: auto;    /*Clear Fix*/
 }
 
 .qualidade_lista li {
