--- a/web/css/produtos.css
+++ b/web/css/produtos.css
@@ -151,7 +151,7 @@ margin: 0 auto;
 	font-family: Georgia, 'Times New Roman', serif;
 }
 
-.dados_email {
+.orcamento_dados span:nth-of-type(2) {
 	margin-bottom: 40px;
 }
 
