--- a/web/css/style.css
+++ b/web/css/style.css
@@ -11,7 +11,8 @@ p {
 }
 
 img {
-    display: block
+    display: block;
+    max-width: 100%;
 }
 
 .btn {
@@ -197,6 +198,10 @@ img {
 .produtos_lista li {
     background: #fec63e;
     text-align: center;
+}
+
+.produtos_lista li img {
+    margin: 0 auto;
 }
 
 .produtos_lista li h3 {
